--- a/views/index.ejs
+++ b/views/index.ejs
@@ -284,8 +284,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="banner-content-five">
-                            <h2 class="title" data-aos="fade-right" data-aos-delay="0">Who we
-                                <span>Are
+                            <h2 class="title" data-aos="fade-right" data-aos-delay="0">Partnerships to Grow
+                                <span>Together
                                     <svg viewBox="0 0 183 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M1.1884 13.1749C27.3244 9.45935 96.6096 -9.08021 181.595 12.5919"
                                             stroke="#0055FF" stroke-width="4" />
@@ -323,7 +323,7 @@
                                     </div>
                                     <div class="content">
                                         <h5 class="title">Technology</h5>
-                                        <p>eed are little help fromery fri of anery integrated</p>
+                                        <p>Strong focus on data analytics to enhance efficiency and effectiveness whilst creating actionable value creation opportunities for our stakeholcern.</p>
                                     </div>
                                 </li>
                                 <li style="margin-bottom: 20px;">
@@ -332,7 +332,7 @@
                                     </div>
                                     <div class="content">
                                         <h5 class="title">Mindset</h5>
-                                        <p>eed are little help fromery fri of anery integrated</p>
+                                        <p>A growth mindset continuously striving to deliver high-quallty, top-notch work and create sustainable value for our clients.</p>
                                     </div>
                                 </li>
                                 <li style="margin-bottom: 20px;">
@@ -341,7 +341,8 @@
                                     </div>
                                     <div class="content">
                                         <h5 class="title">People</h5>
-                                        <p>eed are little help fromery fri of anery integrated</p>
+                                        <p>We are a team of 10% people ceross multiple fleida (finance, MIA, data science) of varied experience levels, facilitating a well rounded exposure
+                                            to different discipines.</p>
                                     </div>
                                 </li>
                                 <li style="margin-bottom: 20px;">
@@ -350,7 +351,7 @@
                                     </div>
                                     <div class="content">
                                         <h5 class="title">Process</h5>
-                                        <p>eed are little help fromery fri of anery integrated</p>
+                                        <p>We have an internally developed diligence framework adequately supported by a structured and systematic process, leveraging our experience of leading and-to"end Mad projects for big consultancy firms.</p>
                                     </div>
                                 </li>
 
