tagline style update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -284,13 +284,13 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="banner-content-five">
-                            <h2 class="title" data-aos="fade-right" data-aos-delay="0">Partnerships to Grow
-                                <span>Together
+                            <h2 class="title" data-aos="fade-right" data-aos-delay="0">Partnerships to Grow Together
+                                <!-- <span>
                                     <svg viewBox="0 0 183 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M1.1884 13.1749C27.3244 9.45935 96.6096 -9.08021 181.595 12.5919"
                                             stroke="#0055FF" stroke-width="4" />
                                     </svg>
-                                </span>
+                                </span> -->
                             </h2>
                             <p data-aos="fade-right" data-aos-delay="300">At Hillpine Consulting, we foster collaborative partnerships that drive growth. Our dedicated team of experts works closely with clients to understand their unique needs and challenges. Through a combination of industry knowledge, innovative strategies, and tailored solutions, we help businesses achieve their goals and unlock their full potential. With a focus on trust, integrity, and quality, we are committed to delivering exceptional results and building long-term relationships with our valued clients.</p>
                             <a href="/services" class="btn btn-three" data-aos="fade-right" data-aos-delay="600">Our
