australia added in map

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -74,6 +74,11 @@
         background-color: #aabbcc;
     }
 
+    #australia>div:first-child {
+        background-color: #f28e1c;
+    }
+
+
     .pills-holder {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -134,7 +139,8 @@
             "GB": "#efcda0",  // United Kingdom
             "FR": "#064854",  // France
             "DE": "#106f82",   // Germany
-            "US": "#aabbcc"   // United States
+            "US": "#aabbcc",   // United States
+            "AU" : "#f28e1c"   //Australia
         };
         polygonSeries.mapPolygons.template.adapters.add("fill", function (fill, target) {
             if (target.dataItem.dataContext && countryColorMap.hasOwnProperty(target.dataItem.dataContext.id)) {
@@ -173,6 +179,7 @@
                     document.getElementById('france').style.display = 'none';
                     document.getElementById('united-kingdom').style.display = 'none';
                     document.getElementById('united-states').style.display = 'none';
+                    document.getElementById('australia').style.display = 'none';
                 }
                 else if (target.dataItem.dataContext.id == 'FR') {
                     document.getElementById('india').style.display = 'none';
@@ -180,6 +187,7 @@
                     document.getElementById('france').style.display = 'block';
                     document.getElementById('united-kingdom').style.display = 'none';
                     document.getElementById('united-states').style.display = 'none';
+                    document.getElementById('australia').style.display = 'none';
                 }
                 else if (target.dataItem.dataContext.id == 'DE') {
                     document.getElementById('india').style.display = 'none';
@@ -187,6 +195,7 @@
                     document.getElementById('france').style.display = 'none';
                     document.getElementById('united-kingdom').style.display = 'none';
                     document.getElementById('united-states').style.display = 'none';
+                    document.getElementById('australia').style.display = 'none';
                 }
                 else if (target.dataItem.dataContext.id == 'GB') {
                     document.getElementById('india').style.display = 'none';
@@ -194,6 +203,7 @@
                     document.getElementById('france').style.display = 'none';
                     document.getElementById('united-kingdom').style.display = 'block';
                     document.getElementById('united-states').style.display = 'none';
+                    document.getElementById('australia').style.display = 'none';
                 }
                 else if (target.dataItem.dataContext.id == 'US') {
                     document.getElementById('india').style.display = 'none';
@@ -201,6 +211,15 @@
                     document.getElementById('france').style.display = 'none';
                     document.getElementById('united-kingdom').style.display = 'none';
                     document.getElementById('united-states').style.display = 'block';
+                    document.getElementById('australia').style.display = 'none';
+                }
+                else if (target.dataItem.dataContext.id == 'AU') {
+                    document.getElementById('india').style.display = 'none';
+                    document.getElementById('germany').style.display = 'none';
+                    document.getElementById('france').style.display = 'none';
+                    document.getElementById('united-kingdom').style.display = 'none';
+                    document.getElementById('united-states').style.display = 'none';
+                    document.getElementById('australia').style.display = 'block';
                 }
             }
             else {
@@ -209,6 +228,7 @@
                 document.getElementById('france').style.display = 'none';
                 document.getElementById('united-kingdom').style.display = 'none';
                 document.getElementById('united-states').style.display = 'none';
+                document.getElementById('australia').style.display = 'none';
             }
         });
 
@@ -325,6 +345,31 @@
                 </div>
             </div>
 
+            <div class="country-card" id="australia">
+                <div>Australia</div>
+                <div>
+                    <div class="d-flex align-items-center gap-4">
+                        <i class="fas fa-handshake d-block"></i>
+                        <p class="m-0">XX Deals</p>
+                    </div>
+
+                    <div class="pills-holder">
+                        <div>
+                            Infrastructure
+                        </div>
+                        <div>
+                            Transport
+                        </div>
+                        <div>
+                            Real Estate
+                        </div>
+                        <div>
+                            Energy
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="country-card" id="united-states">
                 <div>United States</div>
                 <div>
@@ -352,7 +397,7 @@
 
             <p class="map-desc">
                 <em>Given the above-diversified experience of our founding directors with global consultancy firms in
-                    the <b>UK, Germany, France, and India,</b> we can comprehensivelv provide a multi-dimensional view
+                    the <b>UK, Germany, France, US, Australia and India,</b> we can comprehensivelv provide a multi-dimensional view
                     of the expanded risks and opportunities that lie ahead for the business.</em>
             </p>
         </div>
